docs: adapt documentation to proper wording
